style.css
/* ... */
  .contact-form textarea {
    resize: vertical;
  }
  .contact-form button[type="submit"] {
    width: 100%;
    border: none;
    outline: none;
    padding: 20px;
    font-size: 24px;
    border-radius: 8px;
    color: #3f4439;
    text-align: center;
    cursor: pointer;
    margin-top: 10px;
    background-color:#f78b98;
    transition: 0.3s ease background-color;
    transition: transform 0.3s ease;
  }
  .contact-form button[type="submit"]:hover {
    background-color: #f78b98;
    transform: scale(1.02);
    transition: transform 0.3s ease;
  }
  #status {
    width: 90%;
    max-width: 500px;
    text-align: center;
    padding: 10px;
    margin: 0 auto;
    border-radius: 8px;
  }
  #status.success {
    background-color: #77e81a;
    color: #3f4439;
    animation: status 10s ease forwards;
  }
  #status.error {
    background-color: #dc4141;
    color: #eaebee;
    animation: status 10s ease forwards;
  }

  @keyframes status {
    0% {
      opacity: 1;
      pointer-events: all;
    }
    90% {
      opacity: 1;
      pointer-events: all;
    }
    100% {
      opacity: 0;
      pointer-events: none;
    }
  }
  
.contact-form i {
  color: #6757b7;
  margin-right: 10px;
}

/* Modal */
.modalBtn {
  width: 90%;
  border: none;
  outline: none;
  padding: 5px;
  border-radius: 8px;
  text-align: center;
  cursor: pointer;
  /* background-color:#7fbaa6; */
  /* transition: 0.3s ease background-color; */
  transition: transform 0.3s ease
}

.modalBtn:hover {
  /* background-color:#f78b98; */
  transform: scale(1.02);
  transition: transform 0.3s ease;
}

.modal {
  display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
  z-index: 1; /* Sit on top */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: auto; /* Enable scroll if needed */
  background-color: rgb(0,0,0); /* Fallback color */
  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
}

/* Modal Content/Box */
.modal-content {
  background-color: #fefefe;
  margin: 15% auto; /* 15% from the top and centered */
  padding: 20px;
  border: 1px solid #888;
  width: 50%; /* Could be more or less, depending on screen size */
  animation: popup 0.5s ease;
}

.modal-content img {
  max-width: 75%;
}

/* .overlay:target .popup{
  
} */

@keyframes popup {
  0%{
    transform: scale(.5);
  }
  70%{
    transform: scale(1.05);
  }
  100%{
    transform: scale(1);
  }
}

/* The Close Button */
.close {
  color: #aaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
}

.close:hover,
.close:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}


@media(max-width: 768px) {
    html, body {
        overflow-x: hidden;
    }

    h2 {
      font-size: 2.5em;
    }

    h3 {
      font-size: 1.25em;
      word-wrap: break-word;
    }

    .form-group {
        font-size: 16px;
      }
      .form-group input,
      .form-group textarea {
        font-size: 16px;
      }
      
      .contact-form button[type="submit"] {
        font-size: 20px;
      }

    .modal-content {
      width: 85%;
    }

    .hero {
      min-height: 50%;
    }

    .reveal-image {
        background-attachment: scroll;
    }

    .reveal-text {
        width: 66%;
        font-size: 20px;
        letter-spacing: 7px;
        line-height: 1.5em;
    }

    .section {
        padding: 2em 2em;
    }
    .section p {
        width: 85%;
    }

    .foreground-image {
        visibility: hidden;
    }

    .big-logo {
        visibility: hidden;
    }

    .header-logo {
        font-size: .75em;
    }

    .burger {
        display: block;
        cursor: pointer;
    }

    nav {
        position:absolute;
        right: 0px;
        height: 92vh;
        top: 8vh;
        background-color: #e8941a;
        opacity: 1;
        z-index: 11;
        max-width: 55%;
        transform: translateX(100%);
        
    }

    .nav-links {
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    .nav-links li {
        opacity: 0;
    }

    .col_1_flex , .col_2_flex {
      max-width: 85%;
    }

}

.nav-active {
    transform: translateX(0%);
    transition: transform 0.3s ease-in;
}

@keyframes navLinkFade {
    from {
        opacity: 0;
        transform: translateX(50px);
    }
    to {
        opacity: 1;
        transform: translateX(0px);
    }
}

.toggle .line1 {
    transform: rotate(-45deg) translate(-5px,6px);
}
.toggle .line2 {
    opacity: 0;
}
.toggle .line3 {
    transform: rotate(45deg) translate(-5px,-6px);
}

